<resources>
    <!-- App Name -->
    <string name="app_name">BoostHub</string>

    <!-- some stuff -->
    <string name="chats">Chats</string>
    <string name="home">Home</string>
    <string name="events">Events</string>
    <string name="profile">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="e_mail">e-mail</string>
    <string name="password">password</string>
    <string name="login">login</string>
    <string name="sign_up">sign up</string>
    <string name="account_sign_up_here">account? sign up here</string>
    <string name="name">user Name</string>
    <string name="password_confirm">password confirm</string>
    <string name="boosthub">BoostHub</string>
    <string name="location">location</string>
    <string name="date">date</string>
    <string name="whats_s_up">whats´s up</string>
    <string name="who_s_there">who´s there</string>
    <string name="what_else">what else</string>
    <string name="restrictions">restrictions</string>
    <string name="delete">delete</string>
    <string name="upload">upload</string>
    <string name="type_here">type here</string>
    <string name="send">send</string>
    <string name="add_event">add event</string>
    <string name="save">save</string>
    <string name="back">back</string>
    <string name="logout">logout</string>
    <string name="add_your_name">add your name</string>
    <string name="change_your_password">change your password</string>
    <string name="current_password">current password</string>
    <string name="new_password">new password</string>
    <string name="your_name">your name</string>
    <string name="add_your_image">add your image</string>
    <string name="watch_on_map_n">watch on map\n️⬇</string>
    <string name="date_star">date *</string>
    <string name="location_star">location *</string>
    <string name="whats_s_up_star">whats_s_up *</string>
    <string name="add_your_event_data">add your event data</string>
    <string name="fields_with_are_required">fields with * are required</string>
    <string name="cancel">cancel</string>
    <string name="edit_profile">edit profile</string>
    <string name="user_name">user name:</string>
    <string name="current_cars">current cars:</string>
    <string name="your_cars">your cars</string>
    <string name="delete_event">delete event</string>
    <string name="edit_event">edit event</string>
    <string name="add_user">add user</string>
    <string name="for_an_event_you_don_t_like">for an event you don\'t like</string>
    <string name="for_an_event_you_want_to_take_part_in">for an event you want to take part in</string>
    <string name="if_you_don_t_know_what_you_want">if you don´t know what you want</string>
    <string name="you_can_decide_whether_you_like_it_or_not">you can decide whether you like it or not</string>
    <string name="at">\@</string>
    <string name="background_image">background image</string>
    <string name="set_background_image">set background image</string>
    <string name="got_an_account_login_here">got an account? login here</string>
</resources>