<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/chatScreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/icon_chat"
        android:iconTint="?attr/colorTertiary"
        android:title="@string/chats" />
    <item
        android:id="@+id/homeScreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/icon_home"
        android:iconTint="?attr/colorTertiary"
        android:title="@string/home" />
    <item
        android:id="@+id/profileScreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/icon_profile"
        android:iconTint="?attr/colorTertiary"
        android:title="@string/profile" />
</menu>